--- a/.gitignore
+++ b/.gitignore
@@ -347,3 +347,7 @@ healthchecksdb
 
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 MigrationBackup/
+RoboVision.sln
+RoboVision.vcxproj
+RoboVision.vcxproj.filter
+RoboVision.exe
